# devops-incident-response

./: .gitattributes  .gitignore  0.8.0  BLOG.md  Dockerfile  FINALS_STATUS.md  README.md  README_github.md  __init__.py  api.py  audit_failures.json  audit_output.txt  check_all.py  check_grader.py  client.py  demo_llm.py  env.py  escape.py  generate_notebook.py  inference.py  inject_live.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  technical_reference.md  test_output.html  train_grpo.ipynb  train_grpo.nbconvert.ipynb  ui_test.py  update_dashboard.py  validate.py
curriculum/: __init__.py  engine.py
data/runbooks/: cascade_failure.md  data_corruption.md  database_performance.md  db_connection.md  deployment_rollback.md  failover_procedures.md  high_cpu.md  memory_leak.md  security_incident.md
generator/: __init__.py  incident_factory.py
graders/: __init__.py  grader.py
kaggle_training/: devops.ipynb
multi_agent/: __init__.py  session.py
server/: app.py  devops_environment.py
tasks/: __init__.py  base.py  task_bonus.py  task_database.py  task_easy.py  task_failover.py  task_generated.py  task_hard.py  task_medium.py  task_security.py
