[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devops-incident-response"
version = "1.0.0"
description = "DevOps Incident Response OpenEnv"
authors = [
    { name = "devops-incident-env" }
]
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.2.0",
    "pydantic>=2.0,<3.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0"
]

[project.scripts]
server = "server.app:main"
